src/test/ui/parser/removed-syntax-field-let.stderr
error: expected identifier, found keyword `let`
  --> $DIR/removed-syntax-field-let.rs:4:5
   |
LL |     let foo: (),
   |     ^^^ expected identifier, found keyword

error: expected `:`, found `foo`
  --> $DIR/removed-syntax-field-let.rs:4:9
   |
LL |     let foo: (),
   |         ^^^ expected `:`

error: aborting due to 2 previous errors

